[package]
name = "layered-poly-commit"
version = "0.1.0"
authors = ["Yutaro Mori <me@yutaromori.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../zexe/algebra", default-features = false, features = ["full"] }
algebra-core = { path = "../zexe/algebra-core", default-features = false }
ff-fft = { path = "../zexe/ff-fft", default-features = false }
poly-commit = { path = "../poly-commit", version = "0.1.0" }
num-bigint = { version = "0.2.6" }
num-traits = { version = "0.2.11" }
rand = { version = "0.7.3" }
rand_core = { version = "0.5", default-features = false }
rand_pcg = { version = "0.2.1" }
rust-crypto = { version = "0.2.36" }