[package]
name = "layered-poly-commit"
version = "0.1.0"
authors = ["Yutaro Mori <me@yutaromori.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { git = "https://github.com/scipr-lab/zexe", rev = "4274843a", default-features = false, features = ["full"] }
algebra-core = { git = "https://github.com/scipr-lab/zexe", rev = "4274843a", default-features = false }
ff-fft = { git = "https://github.com/scipr-lab/zexe", rev = "4274843a", default-features = false }
poly-commit = { git = "https://github.com/rawfalafel/poly-commit", branch = "layered-poly-commit", rev = "6ff4755", default-features = false }
num-bigint = { version = "0.2.6" }
num-traits = { version = "0.2.11" }
rand = { version = "0.7.3" }
rand_core = { version = "0.5", default-features = false }
rand_pcg = { version = "0.2.1" }
rust-crypto = { version = "0.2.36" }